fix:doc文档显示,bugfix
